AC_INIT([ripper.c],[1.0-beta],[mydecay@spine-group.org])
AC_CONFIG_HEADERS([config.h:config.in])
AC_PREFIX_DEFAULT([/usr])

AC_PROG_CC
CFLAGS="-Wall -O2"

AC_CHECK_LIB([pthread], [pthread_create], [], [AC_MSG_ERROR([
You must have libpthread installed in your system.])])

AC_CHECK_LIB([net], [libnet_write], [], [AC_MSG_ERROR([
You must have libnet installed in your system.])])

AC_CHECK_LIB([pcap], [pcap_lookupdev], [], [AC_MSG_ERROR([
You must have libpcap installed in your system.])])

echo "
PLATFORM ..... : `uname -mp`
O.S. ......... : `uname -rs` (`uname -n`)
COMPILER ..... : ${CC}
CFLAGS ....... : ${CFLAGS}
DEFINES ...... : ${DEFS}
LIBS ......... : ${LIBS}

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
